--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "antd": "^5.22.6",
+    "font-awesome": "^4.7.0",
     "mongoose": "^8.9.2",
     "next": "15.1.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sass": "^1.83.0",
+    "sass-loader": "^16.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
